@@ -1,8 +1,8 @@
 /*
  *  Mathlib : A C Library of Special Functions
+ *  Copyright (C) 2000-2020 The R Core Team
+ *  Copyright (C) 2005-2020 The R Foundation
  *  Copyright (C) 1998 Ross Ihaka
- *  Copyright (C) 2000-2015 The R Core Team
- *  Copyright (C) 2005-2015 The R Foundation
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -45,7 +45,7 @@
 #include "dpq.h"
 #include <limits.h>
 
-// afc(i) :=  ln( i! )	[logarithm of the factorial i]
+// afc(i) :=  ln( i! )	[logarithm of the factorial i] = {R:} lgamma(i + 1) = {C:} lgammafn(i + 1)
 static double afc(int i)
 {
     // If (i > 7), use Stirling's approximation, otherwise use table lookup.
@@ -92,7 +92,7 @@ double rhyper(double nn1in, double nn2in, double kkin)
     static int ks = -1, n1s = -1, n2s = -1;
     static int m, minjx, maxjx;
     static int k, n1, n2; // <- not allowing larger integer par
-    static double tn;
+    static double N;
 
     // II :
     static double w;
@@ -119,46 +119,46 @@ double rhyper(double nn1in, double nn2in, double kkin)
 	    return rbinom(kkin, nn1in / (nn1in + nn2in));
 	}
 	// Slow, but safe: return  F^{-1}(U)  where F(.) = phyper(.) and  U ~ U[0,1]
-	return qhyper(unif_rand(), nn1in, nn2in, kkin, FALSE, FALSE);
+	return qhyper(unif_rand(), nn1in, nn2in, kkin,
+		      /*lower_tail =*/ FALSE, /*log_p = */ FALSE);
+	// lower_tail=FALSE: a thinko, is still "correct" as equiv. to  U <--> 1-U
     }
     nn1 = (int)nn1in;
     nn2 = (int)nn2in;
     kk  = (int)kkin;
 
     /* if new parameter values, initialize */
-    if (nn1 != n1s || nn2 != n2s) {
+    if (nn1 != n1s || nn2 != n2s) { // n1 | n2 is changed: setup all
 	setup1 = TRUE;	setup2 = TRUE;
-    } else if (kk != ks) {
+    } else if (kk != ks) { // n1 & n2 are unchanged: setup 'k' only
 	setup1 = FALSE;	setup2 = TRUE;
-    } else {
+    } else { // all three unchanged ==> no setup
 	setup1 = FALSE;	setup2 = FALSE;
     }
-    if (setup1) {
-	n1s = nn1;
-	n2s = nn2;
-	tn = nn1 + nn2;
+    if (setup1) { // n1 & n2
+	n1s = nn1; n2s = nn2; // save
+	N = nn1 + (double)nn2; // avoid int overflow
 	if (nn1 <= nn2) {
-	    n1 = nn1;
-	    n2 = nn2;
-	} else {
-	    n1 = nn2;
-	    n2 = nn1;
+	    n1 = nn1; n2 = nn2;
+	} else { // nn2 < nn1
+	    n1 = nn2; n2 = nn1;
 	}
+	// now have n1 <= n2
     }
-    if (setup2) {
-	ks = kk;
-	if (kk + kk >= tn) {
-	    k = (int)(tn - kk);
+    if (setup2) { // k
+	ks = kk; // save
+	if (kk + kk >= N) {
+	    k = (int)(N - kk);
 	} else {
 	    k = kk;
 	}
     }
     if (setup1 || setup2) {
-	m = (int) ((k + 1.) * (n1 + 1.) / (tn + 2.));
+	m = (int) ((k + 1.) * (n1 + 1.) / (N + 2.)); // m := floor(adjusted mean E[.])
 	minjx = imax2(0, k - n2);
 	maxjx = imin2(n1, k);
 #ifdef DEBUG_rhyper
-	REprintf("rhyper(nn1=%d, nn2=%d, kk=%d), setup: floor(mean)= m=%d, jx in (%d..%d)\n",
+	REprintf("rhyper(n1=%d, n2=%d, k=%d), setup: floor(a.mean)=: m = %d, [min,maxjx]= [%d,%d]\n",
 		 nn1, nn2, kk, m, minjx, maxjx);
 #endif
     }
@@ -166,7 +166,7 @@ double rhyper(double nn1in, double nn2in, double kkin)
 
     if (minjx == maxjx) { /* I: degenerate distribution ---------------- */
 #ifdef DEBUG_rhyper
-	REprintf("rhyper(), branch I (degenerate)\n");
+	REprintf("rhyper(), branch I (degenerate): ix := maxjx = %d\n", maxjx);
 #endif
 	ix = maxjx;
 	goto L_finis; // return appropriate variate
@@ -207,12 +207,13 @@ double rhyper(double nn1in, double nn2in, double kkin)
 		goto L10;
 	    // FIXME  if(p == 0.)  we also "have lost"  => goto L10
 	}
+
     } else { /* III : H2PE Algorithm --------------------------------------- */
 
 	double u,v;
 
 	if (setup1 || setup2) {
-	    s = sqrt((tn - k) * k * n1 * n2 / (tn - 1) / tn / tn);
+	    s = sqrt((N - k) * k * n1 * n2 / (N - 1) / N / N);
 
 	    /* remark: d is defined in reference without int. */
 	    /* the truncation centers the cell boundaries at 0.5 */
@@ -245,11 +246,12 @@ double rhyper(double nn1in, double nn2in, double kkin)
 	v = unif_rand();
 	n_uv++;
 	if(n_uv >= 10000) {
-	    REprintf("rhyper() branch III: giving up after %d rejections", n_uv);
+	    REprintf("rhyper(*, n1=%d, n2=%d, k=%d): branch III: giving up after %d rejections\n",
+		     nn1, nn2, kk, n_uv);
 	    ML_ERR_return_NAN;
         }
 #ifdef DEBUG_rhyper
-	REprintf(" ... L30: new (u=%g, v ~ U[0,1])[%d]\n", u, n_uv);
+	REprintf(" ... L30 [%d]: new (u=%g, v ~ U[0,1]=%g): ", n_uv, u,v);
 #endif
 
 	if (u < p1) {		/* rectangular region */
@@ -362,21 +364,26 @@ double rhyper(double nn1in, double nn2in, double kkin)
 	} // else
 	if (reject)
 	    goto L30;
-    }
+
+    } // end{branch III}
 
 
-L_finis:
-    /* return appropriate variate */
+L_finis:  /* return appropriate variate */
 
-    if (kk + kk >= tn) {
+#ifdef DEBUG_rhyper
+    REprintf(" L_finis: ix = %d, then", ix);
+#endif
+    if (kk + kk >= N) {
 	if (nn1 > nn2) {
 	    ix = kk - nn2 + ix;
 	} else {
 	    ix = nn1 - ix;
 	}
-    } else {
-	if (nn1 > nn2)
-	    ix = kk - ix;
+    } else if (nn1 > nn2) {
+	ix = kk - ix;
     }
+#ifdef DEBUG_rhyper
+    REprintf(" %d\n", ix);
+#endif
     return ix;
 }
